# CS2881-Midterm-Project

./: README.md  extensions.py  main.py  pyproject.toml
data/: data_extractor.py
main/: Evaluator.py
modules/: Evaluator.py  Model.py
prompts/: harvard_answerable.txt  harvard_unanswerable.txt  prompts.txt
utils/: helpers.py
